Added the dogs API to the last image of left column

--- a/Brownies.html
+++ b/Brownies.html
@@ -49,7 +49,7 @@
     <img src="images/IceCream.jpg">
     <img src="images/Pancake.jpg">
     <img src="images/Pretzels.jpg">
-    <img src="images/Strawberry.jpg">
+    <img class="api" src="images/Strawberry.jpg">
 </section>
 
 <!--****************************************************************************************************************************************************************************************-->
