--- a/Brownies.html
+++ b/Brownies.html
@@ -28,10 +28,10 @@
         </div>
         <nav>
             <ul class="navList">
-                <li class="threeSevenFive"><a href=#pageTop>Top of page</a></li>
-                <li class="threeTwenty"><a href=#story>Life Story</a></li>
-                <li><a href=#ingredients>Ingredients</a></li>
-                <li><a href="#recipe">Recipe</a></li>
+                <li class="threeSevenFive hover"><a href=#pageTop>Top of page</a></li>
+                <li class="threeTwenty hover"><a href=#story>Life Story</a></li>
+                <li class="hover"><a href=#ingredients>Ingredients</a></li>
+                <li class="hover"><a href="#recipe">Recipe</a></li>
                 <!-- <li><a href="#contactInformation">Contact information</a></li> -->
                 <li><i class="fa-solid fa-circle-half-stroke fa-rotate-180"></i><button class="lightDark">Light Mode</button></li>
                 <!--  -->
@@ -154,11 +154,11 @@
 <footer>
     <h3>Contact Information</h3>
     <ol>
-        <li>Meet the Crew</li>
-        <li>Join the Crew</li>
-        <li>Contact the Crew</li>
-        <li>File a Complaint/Praise</li>
-        <li>Submit Recipes</li>
+        <li class="hover">Meet the Crew</li>
+        <li class="hover">Join the Crew</li>
+        <li class="hover">Contact the Crew</li>
+        <li class="hover">File a Complaint/Praise</li>
+        <li class="hover">Submit Recipes</li>
     </ol>
 </footer>
 <!--***************************JAVASCRIPT************************************-->
